# sudoku-solver-c

./: CMakeLists.txt  LICENSE  README.md  args.c  args.h  gameGui.c  gameGui.h  helper.c  helper.h  io.c  io.h  main.c  main.h  test.c  test.h
sudoku/: backTrackingSolver.c  backTrackingSolver.h  board.c  board.h  generator.c  generator.h  history.c  history.h  penAndPaperSolver.c  penAndPaperSolver.h  random.c  random.h  solver.c  solver.h
